#RG-569 overflow: auto for sidebar content to avoid always visible scroll
Former-commit-id: f443faae2e0e39009897cc1e68cbf5fef1e0c8ff

--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -23,7 +23,7 @@ $sidebar-bottom-spacing: 9999px;
 .ring-sidebar_active {
   left: 50%;
 
-  overflow: scroll;
+  overflow: auto;
   box-shadow: -2px 0 4px 0 #BEBEBE;
 
   .ring-sidebar__i {
